链式调用简易实现

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "easy": "node test/easy.js",
-    "async": "node test/easy-async.js"
+    "async": "node test/easy-async.js",
+    "chain": "node test/easy-chain.js"
   },
   "repository": {
     "type": "git",
