--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "easy": "node test/easy.js",
     "async": "node test/easy-async.js",
     "chain": "node test/easy-chain.js",
-    "chain-async": "node test/easy-chain-async.js"
+    "chain-async": "node test/easy-chain-async.js",
+    "test": "promises-aplus-tests src/promise.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/maomao1996/Promise/issues"
   },
-  "homepage": "https://github.com/maomao1996/Promise#readme"
+  "homepage": "https://github.com/maomao1996/Promise#readme",
+  "devDependencies": {
+    "promises-aplus-tests": "^2.1.2"
+  }
 }
